--- a/src/client/index.html
+++ b/src/client/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>OpenFront (ALPHA)</title>
+    <title>  Terricoutnries (ALPHA)</title>
     <link rel="manifest" href="../../resources/manifest.json" />
 
     <!-- Critical CSS to prevent FOUC -->
